# template-cmdline

./: Cargo.toml  LICENSE-MIT
src/: cli.rs  logger.rs  main.rs
