[package]
name = "template-cmdline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[features]
default = ["color"]
color = []

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
